--- a/prototype/index.html
+++ b/prototype/index.html
@@ -91,7 +91,7 @@
                  </nav>
             </section>
             <footer>
-                <h6 id="footnote1">&copy; 2025 Dhruv Bhale<a href="mailto:mail@ualr.edu" >Email</a>| <a href="#top">Back to Top</a></h6> </h6>
+                <h6 id="footnote1">&copy; 2025 Dhruv Bhale | <a href="mailto:mail@ualr.edu" >Email</a> | <a href="#top">Back to Top</a></h6> </h6>
             </footer> 
 
         </main>
