--- a/prototype/index.html
+++ b/prototype/index.html
@@ -14,17 +14,9 @@
             </header>
             <section id="content">
                 <p>The University of Arkansas at Little Rock (UA Little Rock) is a public research university in Little Rock, Arkansas. Established as Little Rock Junior College by the Little Rock School District in 1927, the institution became a private four-year university under the name Little Rock University in 1957. It returned to public status in 1969 when it merged with the University of Arkansas System under its present name. The former campus of Little Rock Junior College is now (2019) the campus of Philander Smith University.</p>
-                <p>At 250 acres (100 ha), the UA Little Rock campus encompasses more than 56 buildings, including the Center for Nanotechnology Integrative Sciences, the Emerging Analytics Center, the Sequoyah Research Center, and the Ottenheimer Library Additionally, UA Little Rock houses special learning facilities that include a learning resource center, art galleries, KUAR public radio station,[6] University Television, and a campus-wide wireless network. It is classified among "R2: Doctoral Universities – High research activity".</p>
-                <nav>
-                    <ul>
-                        <li><a href="" title="Home">Home</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock" title="About UALR">About</a></li>
-                        <li><a href="https://ualr.edu" title="UALR" target="_blank">UALR</a></li>
-                        <li><a href="mailto:mail@ualr.edu" title="Contact">Contact</a></li>
-                    </ul>
-                 </nav>
+                <p>At 250 acres (100 ha), the UA Little Rock campus encompasses more than 56 buildings, including the Center for Nanotechnology Integrative Sciences, the Emerging Analytics Center, the Sequoyah Research Center, and the Ottenheimer Library Additionally, UA Little Rock houses special learning facilities that include a learning resource center, art galleries, KUAR public radio station, University Television, and a campus-wide wireless network. It is classified among "R2: Doctoral Universities – High research activity".</p>
                 <h2>Academics</h2>
-                <p>The university features more than 100 undergraduate degrees and 60 graduate degrees, including graduate certificates, master's degrees, and doctorates, through both traditional and online courses.[13] Students attend classes in one of the university's three new colleges and a law school.</p>
+                <p>The university features more than 100 undergraduate degrees and 60 graduate degrees, including graduate certificates, master's degrees, and doctorates, through both traditional and online courses. Students attend classes in one of the university's three new colleges and a law school.</p>
                 <ul>
                     <li>College of Business, Health, and Human Services</li>
                     <li>College of Humanities, Arts, Social Sciences, and Education</li>
@@ -89,6 +81,14 @@
                     <li>Center for Arkansas History and Culture</li>
                     <li>Sequoyah National Research CenterSequoyah National Research Center</li>
                  </ul>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock" title="About UALR">About</a></li>
+                        <li><a href="https://ualr.edu" title="UALR" target="_blank">UALR</a></li>
+                        <li><a href="mailto:mail@ualr.edu" title="Contact">Contact</a></li>
+                    </ul>
+                </nav> 
                  
             </section>
             <footer>
