--- a/prototype/index.html
+++ b/prototype/index.html
@@ -182,7 +182,7 @@
                 </div><!--closing of archives-->
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="ifsc-1310/index.html">Home</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock" title="About UALR">About</a></li>
                         <li><a href="https://ualr.edu" title="UALR" target="_blank">UALR</a></li>
                         <li><a href="mailto:mail@ualr.edu" title="Contact">Contact</a></li>
