prototype HTML5 assignment submission

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Dhruv Bhale">
         <!--This is Character encoding which  tells the web browser which character set to use.-->
         <meta charset="utf-8">
-        <!-- along with the title, a webpage needs a description that tells the user what the webpage is about-->
+        <!-- along with the title, a webpage needs a description that tells the user what the webpage is about, here it would show "Assignment 1"-->
         <meta name="description" content="Assignment 1">
     </head>
 
@@ -32,6 +32,7 @@
                 <h2>Academics</h2>
                 <p>The university features more than 100 undergraduate degrees and 60 graduate degrees, including graduate certificates, master's degrees, and doctorates, through both traditional and online courses. Students attend classes in one of the university's three new colleges and a law school.</p>
                 <!-- A definition list within an unordered list --> 
+                <!--taken data for definition from college website-->
                 <ul>
                     <li>
                         
@@ -64,6 +65,7 @@
                 </ul>
             </div><!--closing of academics-->
                 <div id="statsticks">
+                <!--A table consisting of 5 rows and 5 columns with a horizontal heading -->    
                 <!-- I made up data for this table -->
                 <table border="1">
                     <caption><strong>University Statistics</strong></caption>
@@ -119,7 +121,7 @@
                 <h3>Student life</h3>
                 <p>Student body composition as of may 2, 2022</p>
                 <table border="1">
-                    <caption>Race and Ethnicity</caption>
+                    <caption><strong>Race and Ethnicity</strong></caption>
                     <thead>
                         <tr>
                             <th scope="col">Race/Ethnicity</th>
