--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <h1>Dhruv Bhale</h1>
   <nav>
     <ul>
-        <li><a href="prototype/index.html">First Assignment</a></li> 
+        <li><a href="prototype/index.html">First Assignment</a></li>
+        <li><a href="css-demo/index.html">CSS Demo</a></li> 
     </ul>
   </nav>
 </body>
