Prototype HTML5 Assignment Submission

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -38,7 +38,7 @@
                         
                         <dl>
                             <dt>CBHHS</dt>
-                          <dd><strong>In College of Business, Health, and Human Services</strong>, Students can choose from a range of programs designed to educate, inspire, and prepare them for a fulfilling career. Our college consists of five schools that offer academic programs at all levels – minors, certificates, bachelors, masters, and doctoral degrees.</dd>
+                          <dd>In <strong>College of Business, Health, and Human Services</strong>, Students can choose from a range of programs designed to educate, inspire, and prepare them for a fulfilling career. Our college consists of five schools that offer academic programs at all levels – minors, certificates, bachelors, masters, and doctoral degrees.</dd>
                         </dl>
                     </li>
                     <li>
@@ -67,7 +67,7 @@
                 <div id="statsticks">
                 <!--A table consisting of 5 rows and 5 columns with a horizontal heading -->    
                 <!-- I made up data for this table -->
-                <table border="1">
+                <table>
                     <caption><strong>University Statistics</strong></caption>
                       <thead>
                           <tr>
@@ -120,7 +120,7 @@
                 <div id="studentlife">
                 <h3>Student life</h3>
                 <p>Student body composition as of may 2, 2022</p>
-                <table border="1">
+                <table>
                     <caption><strong>Race and Ethnicity</strong></caption>
                     <thead>
                         <tr>
@@ -184,7 +184,7 @@
                 </div><!--closing of archives-->
                 <nav>
                     <ul>
-                        <li><a href="https://dhruvbhale29.github.io/ifsc-1310/">Home</a></li>
+                        <li><a href="https://dhruvbhale29.github.io/ifsc-1310/" title="Home">Home</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock" title="About UALR">About</a></li>
                         <li><a href="https://ualr.edu" title="UALR" target="_blank">UALR</a></li>
                         <li><a href="mailto:mail@ualr.edu" title="Contact">Contact</a></li>
