--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <nav>
     <ul>
         <li><a href="prototype/index.html">First Assignment</a></li>
-        <li><a href="css-demo/index.html">CSS Demo</a></li> 
+        <li><a href="css-demo/index.html">CSS Demo</a></li>
+        <li><a href="assets/img/Flexbox-frogy.png">Froggy</a></li> 
     </ul>
   </nav>
 </body>
