--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <ul>
         <li><a href="prototype/index.html">First Assignment</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
-        <li><a href="assets/img/Flexbox-frogy.png">Froggy</a></li> 
+        <li><a href="assets/img/Flexbox-frogy.png">Flexbox Froggy</a></li>
+        <li><a href="assets/img/cssdinner.png">Css Dinner</a></li> 
     </ul>
   </nav>
 </body>
