--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
         <li><a href="prototype/index.html">First Assignment</a></li>
         <li><a href="css-demo/index.html">CSS Demo</a></li>
         <li><a href="assets/img/Flexbox-frogy.png">Flexbox Froggy</a></li>
-        <li><a href="assets/img/cssdinner.png">Css Dinner</a></li> 
+        <li><a href="assets/img/cssdinner.png">Css Dinner</a></li>
+        <li>Positioning Lab
+          <ul>
+            <li><a href="positioning lab/float-1.html">Float 1</a></li>
+            <li><a href="positioning lab/float-2.html">Float 2</a></li>
+            <li><a href="positioning lab/absolute-1.html">Absolute 1</a></li>
+            <li><a href="positioning lab/absolute-2.html">Absolute 2</a></li>
+          </ul>
+        </li> 
     </ul>
   </nav>
 </body>
