--- a/positioning lab/float-1.html
+++ b/positioning lab/float-1.html
@@ -34,18 +34,48 @@
     }
     #navy {
       background-color: #001f3f;
+      width:370px;
+      height:150px;
+      margin-top:20px;
+      margin-left: 20px;
+      margin-bottom: 10px;
+      margin-right: 5px;
+      float: left;
     }
     #teal {
       background-color: #39CCCC;
+      width:370px;
+      height:150px;
+      margin: 20px;
+      margin-left: 10px;
+      float:left;
+
     }
     #blue {
       background-color: #0074D9;
+      width:370px;
+      height:150px;
+      margin-top:5px;
+      margin-left: 20px;
+      margin-right: 5px;
+      margin-bottom: 20px;
+      float: left;
     }
     #aqua {
       background-color: #7FDBFF;
+      width:370px;
+      height:150px;
+      margin-top:5px;
+      margin-left: 10px;
+      margin-bottom: 20px;
+      float:left;
+      
     }
     #footer {
       background-color: #666;
+      margin:20px;
+      clear: both;
+      
     }
     h1 {
       color: #000;
