--- a/positioning lab/absolute-2.html
+++ b/positioning lab/absolute-2.html
@@ -31,22 +31,55 @@
       margin-right: auto;
       margin-left: auto;
       text-shadow: 2px 2px #000;
+      position:relative;
+      height: 600px;
     }
     #navy {
       background-color: #001f3f;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 125px;
+      height: 125px;
     }
     #teal {
       background-color: #39CCCC;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 125px;
+      height: 125px;
     }
     #blue {
       background-color: #0074D9;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 125px;
+      height: 125px;
     }
     #aqua {
       background-color: #7FDBFF;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 125px;
+      height: 125px;
     }
     #footer {
       background-color: #666;
+      position: absolute;
+      width: 125px;
+      height: 125px;
     }
+    body #footer {
+    background-color: #666;
+    top:50%;
+    left:50%;
+    margin-top:-62.5px;
+    margin-left:-62.5px;
+    }
+    
     h1 {
       color: #000;
       font-weight: normal;
