--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </li>
         <li><a href="assets/img/Flexbox-frogy.png">Flexbox Froggy</a></li>
         <li><a href="assets/img/cssdinner.png">Css Dinner</a></li>        
-        <li></li> 
+        <li><a href="assets/img/Meme.jpg">In-Class Assignment</a></li> 
     </ul>
   </nav>
 </body>
