--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -217,7 +217,7 @@
       </div>
     </aside>
     <footer id="colophon" role="contentinfo">
-      <h6>&copy; 2025 Your Name</h6>
+      <h6>&copy; 2025 Dhruv Bhale |</h6>
     </footer>
   </main>
 </body>
