--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <li><a href="positioning lab/absolute-2.html">Absolute 2</a></li>
           </ul>
         </li>
-        <li><a href="assets/img/Flexbox-frogy.png">Flexbox Froggy</a></li>
+        <li><a href="assets/img/flexbox-frogy.png">Flexbox Froggy</a></li>
         <li><a href="assets/img/cssdinner.png">Css Dinner</a></li>        
-        <li><a href="assets/img/Meme.jpg">In-Class Assignment</a></li> 
+        <li><a href="assets/img/meme.jpg">In-Class Assignment</a></li>
+        <li><a href="assets/img/gravit.jpg">Gravit Assignment</a></li> 
     </ul>
   </nav>
 </body>
