Added some images

--- a/mars-rover-p1/index.html
+++ b/mars-rover-p1/index.html
@@ -17,9 +17,9 @@
     <nav>
       <ul>
         <li><a href="https://dhruvbhale29.github.io/ifsc-1310/" title="Home">Home</a></li>
-         <li><a href="mission-history.html">Mission History</a></li>
+         <li><a href="mission.html">Mission History</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="mission-history.html">Contact Us</a></li>
+        <li><a href="contactus.html">Contact Us</a></li>
       </ul>
     </nav>
   </header>
@@ -33,18 +33,20 @@
     <section>
   <h2>Meet the Rovers</h2>
   <article>
+    <h3>Perseverance</h3>
+    <img src="../mars-rover-p1/assets/img/perseverance.jpg" alt="NASA's Perseverance rover on Mars">
+    <p>Perseverance launched on July 30, 2020, and landed in Jezero Crater on February 18, 2021. It is designed to search for signs of ancient life, collect and cache samples for possible return to Earth, and test new technologies for future missions.</p>
+    <p>Among its cutting-edge technologies are the MOXIE experiment (which produces oxygen from the Martian atmosphere), advanced sample caching systems, and the first onboard microphones to record Mars sounds. Perseverance also deployed the Ingenuity helicopter, which achieved the first powered flight on another planet. The rover is currently traversing the delta of an ancient river, analyzing sediment for signs of past microbial life.</p>
+  </article>
+
+
+  <article>
     <h3>Curiosity</h3>
-    <img src="images/curiosity.jpg" alt="NASA's Curiosity rover on Mars">
+    <img src="../mars-rover-p1/assets/img/curiosity.jpg" alt="NASA's Curiosity rover on Mars">
     <p>Launched in 2011 and landing in Gale Crater in August 2012, Curiosity is a nuclear-powered, car-sized rover built to explore Mars' climate and geology. Its mission includes investigating Mars’ habitability, studying its climate and geology, and preparing for future human exploration.</p>
     <p>Key features include its 2.1-meter robotic arm, onboard laboratory for chemical analysis, and advanced camera systems. Curiosity has uncovered strong evidence of ancient freshwater lakes and complex organic molecules, which are the building blocks of life. It continues to explore Mount Sharp, providing valuable data on Mars' sedimentary layers and environmental history.</p>
   </article>
 
-  <article>
-    <h3>Perseverance</h3>
-    <img src="../mars-rover-p1/assets/img/Curiosity.jpeg" alt="NASA's Perseverance rover on Mars">
-    <p>Perseverance launched on July 30, 2020, and landed in Jezero Crater on February 18, 2021. It is designed to search for signs of ancient life, collect and cache samples for possible return to Earth, and test new technologies for future missions.</p>
-    <p>Among its cutting-edge technologies are the MOXIE experiment (which produces oxygen from the Martian atmosphere), advanced sample caching systems, and the first onboard microphones to record Mars sounds. Perseverance also deployed the Ingenuity helicopter, which achieved the first powered flight on another planet. The rover is currently traversing the delta of an ancient river, analyzing sediment for signs of past microbial life.</p>
-  </article>
 </section>
 
     <section>
@@ -56,8 +58,8 @@
   <footer>
    
     <p><strong>THIS WEBSITE WAS CREATED AS A STUDENT PROJECT FOR EDUCATIONAL PURPOSES. NASA IS NOT AFFILIATED WITH OR ENDORSING THIS WORK.</strong></p>
-     &copy; 2025 Dhruv Bhale | <a href="mailto:mail@ualr.edu" >Email</a> | <a href="#top">Back to Top</a></h6>
+     <h6>&copy; 2025 Dhruv Bhale | <a href="mailto:mail@ualr.edu" >Email</a> | <a href="#top">Back to Top</a></h6>
     
   </footer>
 </body>
-</h
+</html>
