Added some changes

--- a/mars-rover-p1/index.html
+++ b/mars-rover-p1/index.html
@@ -16,10 +16,10 @@
     <p class="tagline">Robotic Explorers on the Red Planet</p>
     <nav>
       <ul>
-        <li><a href="https://dhruvbhale29.github.io/ifsc-1310/" title="Home">Home</a></li>
+        <li><a href="https://dhruvbhale29.github.io/ifsc-1310/">Home Page</a></li>
          <li><a href="mission.html">Mission History</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="contactus.html">Contact Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
   </header>
@@ -35,23 +35,29 @@
   <article>
     <h3>Perseverance</h3>
     <img src="../mars-rover-p1/assets/img/perseverance.jpg" alt="NASA's Perseverance rover on Mars">
-    <p>Perseverance launched on July 30, 2020, and landed in Jezero Crater on February 18, 2021. It is designed to search for signs of ancient life, collect and cache samples for possible return to Earth, and test new technologies for future missions.</p>
-    <p>Among its cutting-edge technologies are the MOXIE experiment (which produces oxygen from the Martian atmosphere), advanced sample caching systems, and the first onboard microphones to record Mars sounds. Perseverance also deployed the Ingenuity helicopter, which achieved the first powered flight on another planet. The rover is currently traversing the delta of an ancient river, analyzing sediment for signs of past microbial life.</p>
+    <p>Launched on July 30, 2020, <strong><em>Perseverance</em></strong> touched down in Jezero Crater on February 18, 2021. This rover is designed to search for signs of ancient microbial life, collect rock and soil samples for potential return to Earth, and test technologies critical for future human missions to Mars.</p>
+    <p>Perseverance carries a robust suite of scientific tools, including SHERLOC (a spectrometer), PIXL (an x-ray fluorescence spectrometer), and SuperCam (for remote analysis). It is equipped with the MOXIE instrument to generate oxygen from the Martian atmosphere and has a new terrain navigation system for improved driving. It also carried the <strong>Ingenuity</strong> helicopter, which completed over 50 successful flights, paving the way for aerial exploration of other planets.</p>
   </article>
-
 
   <article>
     <h3>Curiosity</h3>
     <img src="../mars-rover-p1/assets/img/curiosity.jpg" alt="NASA's Curiosity rover on Mars">
-    <p>Launched in 2011 and landing in Gale Crater in August 2012, Curiosity is a nuclear-powered, car-sized rover built to explore Mars' climate and geology. Its mission includes investigating Mars’ habitability, studying its climate and geology, and preparing for future human exploration.</p>
-    <p>Key features include its 2.1-meter robotic arm, onboard laboratory for chemical analysis, and advanced camera systems. Curiosity has uncovered strong evidence of ancient freshwater lakes and complex organic molecules, which are the building blocks of life. It continues to explore Mount Sharp, providing valuable data on Mars' sedimentary layers and environmental history.</p>
+    <p><strong><em>Curiosity</em></strong> launched on November 26, 2011, and landed in Gale Crater on August 6, 2012. Its primary mission is to determine if Mars ever had the conditions to support microbial life. It continues to operate long past its intended mission lifespan, providing insights into Mars' ancient environments.</p>
+    <p>The rover features a 7-foot-long robotic arm, 17 cameras, and an onboard laboratory for analyzing rock and soil samples. Curiosity discovered complex organic molecules in Martian soil, measured radiation levels to assess human mission risks, and uncovered layered sedimentary rocks indicative of long-standing lakes and groundwater. It is currently climbing Mount Sharp to study geological transitions.</p>
+  </article>
+
+  <article>
+    <h3>Spirit</h3>
+    <img src="../mars-rover-p1/assets/img/spirit.jpg" alt="NASA's Spirit rover on Mars">
+    <p><strong><em>Spirit</em></strong> was launched on June 10, 2003, and landed in Gusev Crater on January 4, 2004. Originally planned for a 90-day mission, Spirit amazed engineers by operating for over six years, finally losing contact in 2010.</p>
+    <p>It uncovered strong evidence of ancient volcanic activity and hot springs, as well as signs that Mars once had liquid water. One of its most significant findings was silica-rich soil formed in the presence of water, a key indicator of past habitable conditions. Despite becoming stuck in soft soil in 2009, Spirit continued transmitting data for over a year from its stationary position. Its legacy lives on as a pioneer of Martian surface exploration.</p>
   </article>
 
 </section>
 
     <section>
       <h2>Explore More</h2>
-      <p>Visit the official <a href="https://mars.nasa.gov/" target="_blank" rel="noopener" id="nasaweb">NASA Mars Exploration Program</a> to dive deeper into the data and learn more about ongoing missions.</p>
+      <p>Visit the official <a href="https://mars.nasa.gov/" target="_blank" id="nasaweb">NASA Mars Exploration Program</a> to dive deeper into the data and learn more about ongoing missions.</p>
     </section>
   </main>
 
