--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>IFSC 1310 | Dhruv Bhale</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Dhruv Bhale">
+  <link rel="stylesheet" href="stylehome.css"> 
 
 </head>
 
@@ -20,7 +20,7 @@
           <ul>
             <li><a href="positioning lab/float-1.html">Float 1</a></li>
             <li><a href="positioning lab/float-2.html">Float 2</a></li>
-            <li><a href="positioning lab/absolute-1.html">Absolute 1</a></li>
+            <li><a href="positioning lab/absolute-1.html" id="absolute1">Absolute 1</a></li>
             <li><a href="positioning lab/absolute-2.html">Absolute 2</a></li>
           </ul>
         </li>
