--- a/mars-rover-p1/index.html
+++ b/mars-rover-p1/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>NASA Mars Rovers</title>
   <meta charset="UTF-8">
+  <meta name="author" content="Dhruv Bhale">
+  <meta name="robots" content="noindex">
   <meta name="description" content="Explore NASA's Mars Rovers: Curiosity and Perseverance. Learn about their missions, discoveries, and the future of space exploration.">
   <meta name="keywords" content="NASA, Mars, Rovers, Curiosity, Perseverance, Space Exploration">
-  <title>NASA Mars Rovers</title>
   <link rel="stylesheet" href="../mars-rover-p1/assets/css/style.css">
 </head>
 <body>
