--- a/mars-rover-p1/mission.html
+++ b/mars-rover-p1/mission.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>NASA Mars Rovers</title>
   <meta charset="UTF-8">
+  <meta name="author" content="Dhruv Bhale">
+  <meta name="robots" content="noindex">
   <meta name="description" content="Explore NASA's Mars Rovers: Curiosity and Perseverance. Learn about their missions, discoveries, and the future of space exploration.">
   <meta name="keywords" content="NASA, Mars, Rovers, Curiosity, Perseverance, Space Exploration">
   <title>NASA Mars Rovers</title>
@@ -23,32 +26,53 @@
   </header>
 
   <main>
-    <section>
-      <h2>Pioneering the Path: Early Missions</h2>
-      <article>
-        <h3>Sojourner (1997)</h3>
-        <p>Part of NASA’s Mars Pathfinder mission, Sojourner became the first successful Mars rover, landing on July 4, 1997. Though small, Sojourner provided valuable data on Martian soil mechanics, atmosphere, and rocks using its onboard instruments and cameras.</p>
-      </article>
 
-      <article>
-        <h3>Spirit & Opportunity (2004)</h3>
-        <p>Spirit (MER-A) and Opportunity (MER-B) were twin rovers launched in 2003 and landed in January 2004. They vastly exceeded expectations, operating far beyond their original 90-day missions. Spirit explored Gusev Crater for over 6 years, while Opportunity roamed Meridiani Planum for nearly 15 years, breaking records for distance and endurance.</p>
-      </article>
+      <h2><strong>MISSION HISTORY</strong></h2>
+    <!-- Perseverance Rover Section -->
+    <section>
+      <h2>Perseverance (2021 – Present)</h2>
+      <div class="rover-summary">
+        <p><strong>Launch Date:</strong> July 30, 2020 | <strong>Landing Site:</strong> Jezero Crater</p>
+        <p>Perseverance is the latest rover on Mars, designed to explore Jezero Crater for signs of ancient microbial life. It’s also responsible for collecting soil samples for future return missions to Earth, playing a pivotal role in the search for life beyond Earth.</p>
+      </div>
+      <h3>Mission Highlights</h3>
+      <ul>
+        <li><strong>Ingenuity helicopter:</strong> Perseverance successfully deployed the first helicopter on Mars, Ingenuity, to scout the terrain and assist in exploration.</li>
+        <li><strong>Sample collection:</strong> Perseverance is working to collect Martian soil samples that will be sent back to Earth for analysis in future missions.</li>
+        <li><strong>Atmospheric research:</strong> Perseverance has been producing oxygen from Mars' carbon dioxide-rich atmosphere using the MOXIE experiment.</li>
+      </ul>
     </section>
 
+    <!-- Curiosity Rover Section -->
     <section>
-      <h2>The Age of Advanced Science</h2>
-      <article>
-        <h3>Curiosity (2012 – Present)</h3>
-        <p>Curiosity marked a major leap in rover design, equipped with a nuclear power source and a sophisticated science lab. Since landing in Gale Crater in 2012, it has been studying the layered terrain of Mount Sharp and delivering crucial evidence of ancient lakes and habitability.</p>
-      </article>
-
-      <article>
-        <h3>Perseverance (2021 – Present)</h3>
-        <p>The most advanced Mars rover to date, Perseverance landed in Jezero Crater in 2021. It is tasked with searching for signs of ancient microbial life and collecting samples for future return to Earth. Its accomplishments include deploying the Ingenuity helicopter and producing oxygen on Mars using MOXIE.</p>
-      </article>
+      <h2>Curiosity (2012 – Present)</h2>
+      <div class="rover-summary">
+        <p><strong>Launch Date:</strong> November 26, 2011 | <strong>Landing Site:</strong> Gale Crater</p>
+        <p>Curiosity’s mission is focused on assessing Mars' past and present habitability. Equipped with cutting-edge tools, Curiosity has been studying Mount Sharp in Gale Crater, investigating Mars’ geology, climate, and potential to support microbial life.</p>
+      </div>
+      <h3>Mission Highlights</h3>
+      <ul>
+        <li><strong>Key discovery:</strong> Curiosity found organic molecules in the soil, marking a significant step in understanding Mars' potential for past life.</li>
+        <li><strong>Atmospheric analysis:</strong> Curiosity has been analyzing the Martian atmosphere and weather patterns, crucial for future human missions.</li>
+        <li><strong>Recent achievements:</strong> Curiosity continues to move toward Mount Sharp’s summit, providing valuable data about Mars' history and its potential for life.</li>
+      </ul>
     </section>
 
+    <!-- Spirit Rover Section -->
+    <section>
+      <h2>Spirit (2004 – 2010)</h2>
+      <div class="rover-summary">
+        <p><strong>Launch Date:</strong> June 10, 2003 | <strong>Landing Site:</strong> Gusev Crater</p>
+        <p>Spirit, one of the twin Mars Exploration Rovers (MER), was tasked with investigating the geology and history of water on Mars. Landing in Gusev Crater, Spirit exceeded its 90-day mission by operating for over six years, providing essential data about the Red Planet's past climate and geological features.</p>
+      </div>
+      <h3>Mission Highlights</h3>
+      <ul>
+        <li><strong>First discovery of evidence for past water:</strong> Spirit found signs of ancient hot springs, paving the way for understanding Mars’ past habitability.</li>
+        <li><strong>Geological features:</strong> Spirit studied rocks and soils in Gusev Crater, providing insights into Martian volcanism and impact cratering.</li>
+        <li><strong>End of mission:</strong> Spirit became immobile in 2010 after getting stuck in soft soil, marking the end of its groundbreaking mission.</li>
+      </ul>
+    </section>
+    
     <section>
       <h2>Looking Ahead</h2>
       <p>Future Mars missions will build on the successes of these rovers. NASA and international partners are planning missions to retrieve cached samples, and ultimately, send humans to Mars. Each rover has contributed significantly to paving the way for these monumental steps in space exploration.</p>
