--- a/mars-rover-p1/faq.html
+++ b/mars-rover-p1/faq.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>NASA Mars Rovers</title>
   <meta charset="UTF-8">
+  <meta name="author" content="Dhruv Bhale">
+  <meta name="robots" content="noindex">
   <meta name="description" content="Explore NASA's Mars Rovers: Curiosity and Perseverance. Learn about their missions, discoveries, and the future of space exploration.">
   <meta name="keywords" content="NASA, Mars, Rovers, Curiosity, Perseverance, Space Exploration">
   <title>NASA Mars Rovers</title>
