--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="assets/img/cssdinner.png">Css Dinner</a></li>        
         <li><a href="assets/img/meme.jpg">In-Class Assignment</a></li>
         <li><a href="assets/img/gravit.jpg">Gravit Assignment</a></li> 
-        <li><a href="mars-rover-p1/index.html">Final Project</a></li>
+        <li><a href="mars-rover-p1/index.html">Final Project Draft</a></li>
     </ul>
   </nav>
 </body>
