getting started with the final draft

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="assets/img/meme.jpg">In-Class Assignment</a></li>
         <li><a href="assets/img/gravit.jpg">Gravit Assignment</a></li> 
         <li><a href="mars-rover-p1/index.html">Final Project Draft</a></li>
+        <li><a href="mars-rover-html/index.html">Final Project</a></li>
     </ul>
   </nav>
 </body>
