Added some changes

--- a/mars-rover-Final/index.html
+++ b/mars-rover-Final/index.html
@@ -55,6 +55,61 @@
 
 </section>
 
+<section>
+  <aside>
+    <table class="rover-table">
+      <caption>Mars Rover Specifications Comparison</caption>
+      <thead>
+        <tr>
+          <th scope="col">Rover</th>
+          <th scope="col">Landing Year</th>
+          <th scope="col">Mission Duration</th>
+          <th scope="col">Weight</th>
+          <th scope="col">Power Source</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Perseverance</td>
+          <td>2021</td>
+          <td>Ongoing</td>
+          <td>1,025 kg</td>
+          <td>RTG (Nuclear)</td>
+        </tr>
+        <tr>
+          <td>Curiosity</td>
+          <td>2012</td>
+          <td>Ongoing</td>
+          <td>899 kg</td>
+          <td>RTG (Nuclear)</td>
+        </tr>
+        <tr>
+          <td>Spirit</td>
+          <td>2004</td>
+          <td>6 years</td>
+          <td>185 kg</td>
+          <td>Solar</td>
+        </tr>
+        <tr>
+          <td>Opportunity</td>
+          <td>2004</td>
+          <td>15 years</td>
+          <td>185 kg</td>
+          <td>Solar</td>
+        </tr>
+        <tr>
+          <td>Sojourner</td>
+          <td>1997</td>
+          <td>83 days</td>
+          <td>11.5 kg</td>
+          <td>Solar</td>
+          </tr>
+      </tbody>
+    </table>
+
+  </aside>
+</section>
+
     <section>
       <h2>Explore More</h2>
       <p>Visit the official <a href="https://mars.nasa.gov/" target="_blank" id="nasaweb">NASA Mars Exploration Program</a> to dive deeper into the data and learn more about ongoing missions.</p>
