--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="assets/img/gravit.jpg">Gravit Assignment</a></li> 
         <li><a href="mars-rover-p1/index.html">Final Project Draft</a></li>
         <li><a href="mars-rover-Final">FINAL PROJECT</a></li>
+        <li><a href="slick-demo/index.html">slick-demo</a></li>
     </ul>
   </nav>
 </body>
