--- a/mars-rover-Final/contact.html
+++ b/mars-rover-Final/contact.html
@@ -26,7 +26,9 @@
   </header>
 
   <main>
-    <p>Contact form yet to learn</p>
+    
+    <div id="wufoo-r1yxjwys1j31qcm"> Fill out my <a href="https://dhruv29.wufoo.com/forms/r1yxjwys1j31qcm">online form</a>. </div> <script type="text/javascript"> var r1yxjwys1j31qcm; (function(d, t) { var s = d.createElement(t), options = { 'userName':'dhruv29', 'formHash':'r1yxjwys1j31qcm', 'autoResize':true, 'height':'580', 'async':true, 'host':'wufoo.com', 'header':'show', 'ssl':true }; s.src = ('https:' == d.location.protocol ?'https://':'http://') + 'secure.wufoo.com/scripts/embed/form.js'; s.onload = s.onreadystatechange = function() { var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return; try { r1yxjwys1j31qcm = new WufooForm(); r1yxjwys1j31qcm.initialize(options); r1yxjwys1j31qcm.display(); } catch (e) { } }; var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr); })(document, 'script'); </script>
+
   </main>
 
   <footer>
