Added some changes

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <li><a href="assets/img/meme.jpg">In-Class Assignment</a></li>
         <li><a href="assets/img/gravit.jpg">Gravit Assignment</a></li> 
         <li><a href="mars-rover-p1/index.html">Final Project Draft</a></li>
-        <li><a href="mars-rover-Final">FINAL PROJECT</a></li>
         <li><a href="slick-demo/index.html">slick-demo</a></li>
+        <li><a href="mars-rover-Final">FINAL PROJECT</a></li>
+        <li><a href="revision-reflection/index.html">Project Revision and Reflection</a></li>
     </ul>
   </nav>
 </body>
