--- a/mars-rover-Final/index.html
+++ b/mars-rover-Final/index.html
@@ -56,6 +56,7 @@
 </section>
 
 <section>
+  <h2>Rover Specifications</h2>
   <aside>
     <table class="rover-table">
       <caption>Mars Rover Specifications Comparison</caption>
