--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="mars-rover-p1/index.html">Final Project Draft</a></li>
         <li><a href="slick-demo/index.html">slick-demo</a></li>
         <li><a href="mars-rover-Final">FINAL PROJECT</a></li>
+        <li><a href="progressive-enhancement/index.html">Progressive Enhancement</a></li>
         <li><a href="revision-reflection/index.html">Project Revision and Reflection</a></li>
     </ul>
   </nav>
