--- a/revision-reflection/index.html
+++ b/revision-reflection/index.html
@@ -39,7 +39,7 @@
   </main>
 
   <footer>
-    <h6>&copy; 2025 Dhruv Bhale | <a href="mailto:mail@ualr.edu">Email</a> | <a href="#top">Back to Top</a></h6>
+    <h6>&copy; 2025 Dhruv Bhale | <a href="#top">Back to Top</a></h6>
   </footer>
 </body>
 </html>
